--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
+    "date-fns": "^3.3.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
